--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,45 @@
-asgiref
-dbr
-Django==3.2.12
+asgiref==3.4.1
+backports.entry-points-selectable==1.1.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.10
+distlib==0.3.3
+Django==4.0.1
+django-annoying==0.10.6
+django-boost==1.7.2
 django-cors-headers==3.11.0
-django-filter==21.1
-djangorestframework==3.13.1
+django-event-system==1.0.1
+django-material==1.9.0
+djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
-importlib-metadata==4.10.0
-Markdown==3.3.6
+filelock==3.3.2
+gevent==21.8.0
+glfw==2.5.1
+greenlet==1.1.2
+idna==3.3
+multipledispatch==0.6.0
 mysqlclient==2.1.0
-numpy==1.21.5
+numpy==1.22.0
+oauthlib==3.1.1
 opencv-python==4.5.5.62
-Pillow==9.0.0
+Pillow==8.4.0
+platformdirs==2.4.0
+psycopg2==2.9.1
+pycparser==2.21
 PyJWT==2.3.0
+PyOpenGL==3.1.6
+PyOpenGL-accelerate==3.1.6
+pyrr==0.10.3
 pytz==2021.3
 pyzbar==0.1.8
+requests==2.27.1
+six==1.16.0
 sqlparse==0.4.2
-typing_extensions==4.0.1
-zipp==3.7.0
+tzdata==2021.5
+ua-parser==0.10.0
+urllib3==1.26.8
+user-agents==2.2.0
+virtualenv==20.10.0
+wrapt==1.13.3
+zope.event==4.5.0
+zope.interface==5.4.0
